--- a/Front/src/Components/Button2.css
+++ b/Front/src/Components/Button2.css
@@ -35,15 +35,29 @@ input {
 }
 
 button[type="submit"] {
-  padding: 10px;
-  background-color: #4c2067;
+  padding: 20px;
+  background-color: #8c2ec6;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 20px;
+}
+
+button[type="reg"] {
+  padding: 20px;
+  background-color: #c62eb9;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
 }
 
 button[type="submit"]:hover {
   background-color: #b331db;
+}
+
+button[type="reg"]:hover {
+  background-color: #ea28dd;
 }
