--- a/Front/src/Components/Button4.css
+++ b/Front/src/Components/Button4.css
@@ -1,27 +1,46 @@
 .client-list-container {
-    margin-top: 20px;
-    text-align: left;
-  }
-  
-  .view-button {
-    padding: 10px 15px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-bottom: 10px;
-  }
-  
-  .client-list {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .client-list li {
-    margin-bottom: 10px;
-    background-color: #481261;
-    padding: 10px;
-    border-radius: 5px;
-  }
+  margin-top: 20px;
+  text-align: center;
+}
+
+.centered-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.view-button {
+  padding: 10px 15px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-bottom: 10px;
+  position: relative;
+  top: -900px; 
+}
+
+.client-list {
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.client-list li {
+  background-color: #481261;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 5px;
+  white-space: nowrap;
+  margin-bottom: 6px;
+  font-size: 14px; 
+  line-height: 1.3;
+  position: relative;
+  top: -300px; 
+}
   
