--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -1,6 +1,7 @@
 /* Aquí se define el aspecto visual de los logos*/
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -16,6 +17,13 @@
   height: auto;
 }
 
+
+.logo-tec-login {
+  width: 300px;
+  margin: 20px auto 10px;
+  display: block;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -24,18 +32,94 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  
 }
 
 .App-link {
   color: #61dafb;
 }
+
+.logout-button {
+  margin-top: 10px;
+  padding: 8px 16px;
+  background-color: #e63946;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: bold;
+  z-index: 9999; /* Asegura que esté al frente */
+  position: relative; /* Necesario para que el z-index funcione */
+}
+
+
+
+.logout-button:hover {
+  background-color: #d62828;
+}
+
+
+
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+}
+
+.login-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 350px;
+  padding: 80px;
+  background-color: #ffffff15;
+  border-radius: 16px;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.login-form input {
+  padding: 12px;
+  border-radius: 8px;
+  border: none;
+  font-size: 20px;
+}
+
+.login-form button {
+  padding: 12px;
+  background-color: #61dafb;
+  color: black;
+  font-weight: bold;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.login-form button:hover {
+  background-color: #21a1f1;
+}
+
+
+.titulo-login {
+  font-size: 40px; /* Puedes ajustar el valor a tu gusto */
+  font-weight: bold;
+  margin-bottom: 50px;
+}
+
 
 @keyframes App-logo-spin {
   from {
