--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -115,7 +115,7 @@
 
 
 .titulo-login {
-  font-size: 40px; /* Puedes ajustar el valor a tu gusto */
+  font-size: 40px; 
   font-weight: bold;
   margin-bottom: 50px;
 }
