--- a/Front/src/Components/Button2.css
+++ b/Front/src/Components/Button2.css
@@ -35,13 +35,13 @@ input {
 }
 
 button[type="submit"] {
-  padding: 20px;
-  background-color: #8c2ec6;
+  padding: 10px;
+  background-color: #4c2067;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 button[type="reg"] {
